@@ -1,0 +1,46 @@
+# Copyright (C) 2014 Zentyal S.L.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License, version 2, as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+use strict;
+use warnings;
+
+package ANSTE;
+
+use ANSTE::Config;
+use Time::HiRes qw(gettimeofday);
+
+my $INITIAL_TIME = time();
+
+sub info
+{
+    my ($msg) = @_;
+
+    my $config = ANSTE::Config->instance();
+
+    my $output = '';
+
+    if ($config->verbose()) {
+        my ($seconds, $microseconds) = gettimeofday();
+        my $milliseconds = int ($microseconds / 1000);
+        $seconds -= $INITIAL_TIME;
+        $output .= "$seconds.$milliseconds> ";
+    }
+
+    $output .= "$msg\n";
+
+    print $output;
+}
+
+1;
