@@ -207,9 +207,9 @@ sub deleteImage
     my $hostname = $host->name();
 
     unless ($host->baseImageType() eq 'raw') {
-        print "[$hostname] Deleting image...\n";
+        ANSTE::info("[$hostname] Deleting image...");
         $virtualizer->deleteImage($hostname);
-        print "[$hostname] Image deleted.\n";
+        ANSTE::info("[$hostname] Image deleted.");
     }
 }
 
@@ -234,7 +234,7 @@ sub _deploySnapshot
     my $hostname = $host->name();
     my $cmd = $self->{cmd};
 
-    print "[$hostname] Restoring base snapshot...\n";
+    ANSTE::info("[$hostname] Restoring base snapshot...");
     $cmd->restoreBaseSnapshot($hostname);
 
     my $virtualizer = $self->{virtualizer};
@@ -266,12 +266,12 @@ sub _deployCopy
 
     my $error = 0;
 
-    print "[$hostname] Creating a copy of the base image...\n";
+    ANSTE::info("[$hostname] Creating a copy of the base image...");
 
     try {
         $self->_copyBaseImage() or die "Can't copy base image";
     } catch (ANSTE::Exceptions::NotFound $e) {
-        print "[$hostname] Base image not found, can't continue.";
+        ANSTE::info("[$hostname] Base image not found, can't continue.");
         $error = 1;
     }
 
@@ -284,15 +284,15 @@ sub _deployCopy
     {
         lock ($lockMount);
 
-        print "[$hostname] Updating hostname on the new image...\n";
+        ANSTE::info("[$hostname] Updating hostname on the new image...");
         try {
             my $ok = $self->_updateHostname();
             if (not $ok) {
-                print "[$hostname] Error copying host files.\n";
+                ANSTE::info("[$hostname] Error copying host files.");
                 $error = 1;
             }
         } catch ($e) {
-            print "[$hostname] ERROR: $e\n";
+            ANSTE::info("[$hostname] ERROR: $e");
             $error = 1;
         }
 
@@ -300,7 +300,7 @@ sub _deployCopy
             return undef;
         }
 
-        print "[$hostname] Creating virtual machine ($ip)...\n";
+        ANSTE::info("[$hostname] Creating virtual machine ($ip)...");
         $cmd->createVirtualMachine();
     };
 
@@ -308,12 +308,12 @@ sub _deployCopy
         # Execute pre-install scripts
         my $pre = $host->preScripts();
         if (@{$pre}) {
-            print "[$hostname] Executing pre scripts...\n";
+            ANSTE::info("[$hostname] Executing pre scripts...");
             $cmd->executeScripts($pre);
         }
 
         my $setupScript = "$hostname-setup.sh";
-        print "[$hostname] Generating setup script...\n";
+        ANSTE::info("[$hostname] Generating setup script...");
         $self->_generateSetupScript($setupScript);
         $self->_executeSetupScript($ip, $setupScript);
 
@@ -321,9 +321,9 @@ sub _deployCopy
         # scripts as well. This permits us to move trasferred file,
         # change their rights and so on.
         my $list = $host->{files}->list(); # retrieve files list
-        print "[$hostname] Transferring files...";
+        ANSTE::info("[$hostname] Transferring files...");
         $cmd->transferFiles($list);
-        print "... done\n";
+        ANSTE::info("... done");
 
         # NAT with this address is not needed anymore
         my $iface = $config->natIface();
@@ -340,14 +340,14 @@ sub _deployCopy
         # Execute post-install scripts
         my $post = $host->postScripts();
         if (@{$post}) {
-            print "[$hostname] Executing post scripts...\n";
+            ANSTE::info("[$hostname] Executing post scripts...");
             $cmd->executeScripts($post);
         }
     } catch (ANSTE::Exceptions::Error $e) {
         my $msg = $e->message();
-        print "[$hostname] ERROR: $msg\n";
+        ANSTE::info("[$hostname] ERROR: $msg");
     } catch ($e) {
-        print "[$hostname] ERROR: $e\n";
+        ANSTE::info("[$hostname] ERROR: $e");
     }
 }
 
@@ -427,19 +427,19 @@ sub _executeSetupScript
 
     my $hostname = $self->{host}->name();
 
-    print "[$hostname] Executing setup script...\n" if $verbose;
-    $client->put($script) or print "Upload failed\n";
-    $client->exec($script, "$script.out") or print "Failed\n";
+    ANSTE::info("[$hostname] Executing setup script...") if $verbose;
+    $client->put($script) or ANSTE::info("Upload failed");
+    $client->exec($script, "$script.out") or ANSTE::info("Failed");
     my $ret = $waiter->waitForExecution($hostname);
-    print "[$hostname] Setup script finished (Return value = $ret).\n";
+    ANSTE::info("[$hostname] Setup script finished (Return value = $ret).");
 
     if ($verbose) {
-        print "[$hostname] Script executed with the following output:\n";
+        ANSTE::info("[$hostname] Script executed with the following output:");
         $client->get("$script.out");
         $self->_printOutput($hostname, "$script.out");
     }
 
-    print "[$hostname] Deleting generated files...\n" if $verbose;
+    ANSTE::info("[$hostname] Deleting generated files...") if $verbose;
     $client->del($script);
     $client->del("$script.out");
     unlink ($script);
@@ -454,9 +454,9 @@ sub _printOutput # (hostname, file)
     open ($FILE, '<', $file) or die "Can't open file $file: $!";
     my @lines = <$FILE>;
     foreach my $line (@lines) {
-        print "[$hostname] $line";
+        ANSTE::info("[$hostname] $line");
     }
-    print "\n";
+    ANSTE::info("");
     close ($FILE) or die "Can't close file $file: $!";
 }
 
