@@ -1,4 +1,5 @@
 HEAD
+    + Print timestamps with each line in verbose mode
     + Fixed default path for chromedriver binary
     + Now config and cli vars are passed to the tests with the GLOBAL_ prefix
 0.11
